--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencyManagement {
 
 dependencies {
 	compile ('org.springframework.cloud:spring-cloud-starter')
+	compile ('org.springframework.cloud:spring-cloud-starter-eureka')
 	compile ('org.springframework.cloud:spring-cloud-starter-eureka-server')
 	compile ('org.springframework.cloud:spring-cloud-starter-ribbon')
 	compile ('org.springframework.data:spring-data-commons')
