modif gradle build

--- a/oauth/build.gradle
+++ b/oauth/build.gradle
@@ -26,6 +26,14 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'OAuthTest'
+    }
+
+    baseName 'oauth'
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
