--- a/oauth/build.gradle
+++ b/oauth/build.gradle
@@ -8,12 +8,17 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    shade
+    compile.extendsFrom shade
+}
+
 dependencies {
-    compile('com.google.oauth-client:google-oauth-client:1.22.0')
-    compile('com.google.oauth-client:google-oauth-client-servlet:1.22.0')
-    compile('com.google.oauth-client:google-oauth-client-appengine:1.22.0')
-    compile('com.google.oauth-client:google-oauth-client-jetty:1.22.0')
-    compile('com.google.http-client:google-http-client-jackson2:1.22.0')
+    shade('com.google.oauth-client:google-oauth-client:1.22.0')
+    shade('com.google.oauth-client:google-oauth-client-servlet:1.22.0')
+    shade('com.google.oauth-client:google-oauth-client-appengine:1.22.0')
+    shade('com.google.oauth-client:google-oauth-client-jetty:1.22.0')
+    shade('com.google.http-client:google-http-client-jackson2:1.22.0')
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 version 'unspecified'
@@ -31,6 +36,11 @@ jar {
         attributes 'Main-Class': 'OAuthTest'
     }
 
+    configurations.shade.each { dep ->
+        from(project.zipTree(dep)) {
+            exclude "META-INF"; "META-INF/**"
+        }
+    }
     baseName 'oauth'
 }
 
